first commit index page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
     <title>Job Hunt</title>
 </head>
 <body>
-    <h1>This is the homepage</h1>
+    <div class="header-container">
+        <div class="logo-container">
+            <h1>huntr</h1>
+        </div>
+        <div class="nav-links">
+            <a href="#">Get Jobs</a>
+            <a href="#">Post Jobs</a>
+        </div>
+        <div class="register-links">
+            <img src="assets/images/MaskGroup3.png" alt="bg">
+            <button class="login">
+                Log In
+            </button>
+            <button class="Sign-Up">
+                Sign Up
+            </button>
+        </div>
+    </div>
 </body>
 </html>
