--- a/login.html
+++ b/login.html
@@ -18,9 +18,9 @@
            <h1>huntr</h1>
            <p class="head">Need a job? Login</p>
            <form class="form">
-                <input type="email" placeholder="Email Address" class="">
-                <input type="password" placeholder="password">
-                <button>Sign In</button>
+                <input type="email" placeholder="Email Address" class="input">
+                <input type="password" placeholder="password" class="input">
+                <button class="input input-dark">Sign In</button>
            </form>
            <p>Don't have an account? <a href="#">Sign Up</a></p>
        </div>           
