--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <title>Job Hunt</title>
 </head>
 <body>
-    <h1>This is the homepage</h1>
+    <footer>
+        <div>
+            <p>huntr</p>
+            <ul>
+                <li><i></i></li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
