--- a/register.html
+++ b/register.html
@@ -5,9 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style-register.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;1,500&display=swap" rel="stylesheet">
     <title>Job Hunt</title>
 </head>
 <body>
-    <h1>This is the register page</h1>
+    <div id="showcase">
+        <div class="login-side">
+        </div> 
+        <div class="login">
+            <h1>huntr</h1>
+            <p class="head">Need a job? Login</p>
+            <form class="form">
+                <input type="text" placeholder="Your Name" class="input">
+                 <input type="email" placeholder="Email Address" class="input">
+                 <input type="password" placeholder="password" class="input">
+                 <button class="input input-dark">Sign In</button>
+            </form>
+            <p>Don't have an account? <a href="#">Log In</a></p>
+        </div>           
+     </div>
 </body>
 </html>
