--- a/index.html
+++ b/index.html
@@ -5,14 +5,65 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href="/css/app.506dccf2.css" rel="stylesheet">
+    <link rel="icon" type="image/png" sizes="32x32" href="/img/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/img/icons/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <link rel="apple-touch-icon" href="/img/icons/apple-touch-icon-152x152.png">
+    <link rel="mask-icon" href="/img/icons/safari-pinned-tab.svg" color="#4DBA87">
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;1,500&display=swap" rel="stylesheet">
     <title>Job Hunt</title>
 </head>
 <body>
-    <footer>
-        <div>
+    <div class="what-we-do">
+        <div class="pics">
+            <div class="real-pics">
+                <img src="./assets/images/brooke-cagle-g1Kr4Ozfoac-unsplash.png" alt="" height="310" width="460">
+            </div>
+        </div>
+        <div class="paragraph">
+            <h1>We will help you get your dream job easy</h1>
+            <p>We connect tech talents with the right job and helped alot of people (and counting) gain access to tech jobs accross the World. We Assess We help techies assess their skilled-level or talent based on their ability to solve problem problems, learning speed ,and strength of character.</p>
+        </div>
+    </div>
+    
+    <footer class="footer">
+        <div class="first-column">
             <p>huntr</p>
             <ul>
-                <li><i></i></li>
+                <li><i><img src="/img/twitter.ce897e80.svg" class="footer__icon"></i></li>
+                <li><i><img src="/img/medium.02a226dd.svg" class="footer__icon"></i></li>
+                <li><i><img src="/img/facebook.e44d4dd6.svg" class="footer__icon"></i></li>
+                <li><i><img src="/img/instagram.dca29619.svg" class="footer__icon"></i></li>
+            </ul>
+        </div>
+        <div class="second-column">
+            <ul class="links">
+                <li class="list"><a href="#">Home</a></li>
+                <li class="list"><a href="#">Pricing</a></li>
+                <li class="list"><a href="#">Pricing</a></li>
+                <li class="list"><a href="#">About Us</a></li>
+            </ul>
+        </div>
+        <div class="third-column">
+            <ul class="links">
+                <li class="list"><a href="#">Career</a></li>
+                <li class="list"><a href="#">Community</a></li>
+                <li class="list"><a href="#">Privacy Policy</a></li>
+            </ul>
+        </div>
+        <div class="fourt-column">
+            <ul class="links">
+                <li class="list"><a href="#">Sign</a></li>
+                <li class="list"><a href="#">Register</a></li>
+                <li class="list"><a href="#">Know More</a></li>
             </ul>
         </div>
     </footer>
