landing page under sytling

--- a/register.html
+++ b/register.html
@@ -13,8 +13,7 @@
         box-sizing: border-box;}
 
 .para{
-   display: flex;
-ju} 
+   display: flex;} 
    
    img{height: 100vh;
     width: 80%;}
