--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="what-we-do">
         <div class="pics">
             <div class="real-pics">
-                <img src="./assets/images/brooke-cagle-g1Kr4Ozfoac-unsplash.png" alt="" height="310" width="460">
+                <img src="./assets/images/brooke-cagle-g1Kr4Ozfoac-unsplash.png" alt="" height="310" width="460" class="img">
             </div>
         </div>
         <div class="paragraph">
@@ -37,7 +37,7 @@
     <footer class="footer">
         <div class="first-column">
             <p>huntr</p>
-            <ul>
+            <ul class="social">
                 <li><i><img src="/img/twitter.ce897e80.svg" class="footer__icon"></i></li>
                 <li><i><img src="/img/medium.02a226dd.svg" class="footer__icon"></i></li>
                 <li><i><img src="/img/facebook.e44d4dd6.svg" class="footer__icon"></i></li>
