--- a/register.html
+++ b/register.html
@@ -25,7 +25,7 @@
                 <input type="text" placeholder="Your Name" class="input">
                  <input type="email" placeholder="Email Address" class="input">
                  <input type="password" placeholder="password" class="input">
-                 <button class="input input-dark">Sign In</button>
+                 <button class="input input-dark">Register</button>
             </form>
             <p>Don't have an account? <a href="#">Log In</a></p>
         </div>           
