index Landing page

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Acme&family=IM+Fell+English+SC&family=Lobster&family=Open+Sans:wght@300;400&family=Oswald:wght@600&family=Rajdhani:wght@500&family=Shizuru&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <title>Job Hunt</title>
 </head>
 <body>
@@ -16,15 +18,170 @@
             <a href="#">Get Jobs</a>
             <a href="#">Post Jobs</a>
         </div>
-        <div class="register-links">
-            <img src="assets/images/MaskGroup3.png" alt="bg">
-            <button class="login">
-                Log In
-            </button>
-            <button class="Sign-Up">
-                Sign Up
-            </button>
+        <div class="register">
+            <div class="register-links">
+                <button class="login">
+                    Log In
+                </button>
+                <button class="Sign-Up">
+                    Sign Up
+                </button>
+            </div>
         </div>
     </div>
+
+    <div class="bg-image">
+        <img src="assets/images/MaskGroup3.png" alt="bg">
+    </div>
+
+    <div class="side-image">
+        <img src="assets/images/MaskGroup2.png" alt="" srcset="">
+    </div>
+
+    <div class="body-text">
+        <h3>GET STARTED</h3>
+        <h1>Find Your Dream Job</h1>
+        <p>
+            We will boost your skills and profile, provide you<br>
+            with personalised career guidance and match you<br>
+            with the right opportunities, so that you can be<br>
+            the Best and the Brightest.
+        </p>
+    </div>
+
+    <div class="search-link">
+        <input type="text" placeholder="Job Title or Keyword"><span class="search">Search</span>
+    </div>
+
+    <div class="jobs">
+        <h1>Latest Jobs</h1>
+    </div>
+
+    <!-- <div class="job-links">
+        <div class="job-card1">
+            <h3>Front End Engineer(Vue,<br>TypeScript)</h3>
+            <p>London, UK, Remote</p>
+            <h6>1 hour ago</h6>
+            <img src="" alt="">
+            <p>Titanbay</p>
+            <button>Apply Now</button>
+        </div>
+        <div class="job-card2">
+            <h3>Senior Frontend Developer-<br>Vuejs</h3>
+            <p>London, UK, Remote</p>
+            <h6>1 hour ago</h6>
+            <img src="" alt="">
+            <p>Titanbay</p>
+            <button>Apply Now</button>
+        </div>
+        <div class="job-card3">
+            <h3>Front End Developer(Vue.js&,<br>Nuxt.js)-Remote(Europe)</h3>
+            <p>London, UK, Remote</p>
+            <h6>1 hour ago</h6>
+            <img src="" alt="">
+            <p>Titanbay</p>
+            <button>Apply Now</button>
+        </div>
+    </div>
+
+    <div class="job-links">
+        <div class="job-card1">
+            <h3>Front End Engineer(Vue,<br>TypeScript)</h3>
+            <p>London, UK, Remote</p>
+            <h6>1 hour ago</h6>
+            <img src="" alt="">
+            <p>Titanbay</p>
+            <button>Apply Now</button>
+        </div>
+        <div class="job-card2">
+            <h3>Senior Frontend Developer-<br>Vuejs</h3>
+            <p>London, UK, Remote</p>
+            <h6>1 hour ago</h6>
+            <img src="" alt="">
+            <p>Titanbay</p>
+            <button>Apply Now</button>
+        </div>
+        <div class="job-card3">
+            <h3>Front End Developer(Vue.js&,<br>Nuxt.js)-Remote(Europe)</h3>
+            <p>London, UK, Remote</p>
+            <h6>1 hour ago</h6>
+            <img src="" alt="">
+            <p>Titanbay</p>
+            <button>Apply Now</button>
+        </div>
+    </div> -->
+
+    <div class="job-cate">
+        <div class="job-category">
+            <h1>Jobs Category</h1>
+        </div>
+
+            <div class="job-links">
+                <div class="job-card1">
+                    <h6>Design</h6>
+                    <p>150 Job Vacancy</p>
+                </div>
+                <div class="job-card2">
+                    <h6>Development</h6>
+                    <p>200 Job Vacancy</p>
+                </div>
+                <div class="job-card3">
+                    <h6>Project Management</h6>
+                    <p>120 Job Vacancy</p>
+                </div>
+            </div>
+    </div>
+
+    <div class="word-text">
+        <div class="body-image">
+            <img src="assets/images/brooke.png" alt="group image">
+        </div>
+        <div class="body-word">
+            <h1>We will help you get your<br> dream job easy</h1>
+            <p>
+                We connect tech talents with the right job and have helped a lot of people (and<br> 
+                counting) gain access to tech jobs across the World. We Assess We help techies<br> 
+                assess their skill-level or talent based on their ability to solve problems, learning<br> 
+                speed, and strength of character.
+            </p>
+        </div>
+    </div>
+
+    <div class="footer">
+        <div class="footer-logo">
+            <div class="logo-container">
+                <h1>huntr</h1>
+            </div>
+            <div class="social-h">
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+            </div>
+        </div>
+        <div class="list-nav">
+            <ul>
+                <li>Home</li>
+                <li>Pricing</li>
+                <li>Features</li>
+                <li>About Us</li>
+            </ul>
+        </div>
+        <div class="list-careers">
+            <ul>
+                <li>Career</li>
+                <li>Community</li>
+                <li>Private Policy</li>
+            </ul>
+        </div>
+        <div class="sign-in">
+            <ul>
+                <li>Sign In</li>
+                <li>Register</li>
+                <li>Know More</li>
+            </ul>
+        </div>
+    </div>
+
 </body>
 </html>
