added the job listing feature

--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
     <div class="jobs">
         <h1>Latest Jobs</h1>
     </div>
-
+    <div class="job_con">
+    </div>
     <!-- <div class="job-links">
         <div class="job-card1">
             <h3>Front End Engineer(Vue,<br>TypeScript)</h3>
@@ -190,5 +191,6 @@
             </ul>
         </div>
     </footer>
+    <script src="app.js"></script>
 </body>
 </html>
