all pages included

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Acme&family=IM+Fell+English+SC&family=Lobster&family=Open+Sans:wght@300;400&family=Oswald:wght@600&family=Rajdhani:wght@500&family=Shizuru&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;1,500&display=swap" rel="stylesheet">
     <title>Job Hunt</title>
 </head>
 <body>
@@ -15,16 +23,16 @@
             <h1>huntr</h1>
         </div>
         <div class="nav-links">
-            <a href="#">Get Jobs</a>
-            <a href="#">Post Jobs</a>
+            <a href="./register.html">Get Jobs</a>
+            <a href="./register.html">Post Jobs</a>
         </div>
         <div class="register">
             <div class="register-links">
                 <button class="login">
-                    Log In
+                    <a href="./login.html">Log In</a>
                 </button>
                 <button class="Sign-Up">
-                    Sign Up
+                    <a href="./register.html">Sign Up</a>
                 </button>
             </div>
         </div>
