--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
                 <input type="password" placeholder="password" class="input">
                 <button class="input input-dark">Sign In</button>
            </form>
-           <p>Don't have an account? <a href="#">Sign Up</a></p>
+           <p>Don't have an account? <a href="./register.html">Sign Up</a></p>
        </div>           
     </div>
 </body>
